--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:layout_gravity="center"
-    android:background="#5E7876"
+    android:background="#685A42"
     >
 
     <TextView
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:text="United States"
-        android:backgroundTint="#03A9F4"
+        android:backgroundTint="#3F51B5"
         android:textSize="25sp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"/>
@@ -36,7 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:text="Canada"
-        android:backgroundTint="#E8799F"
+        android:backgroundTint="#B33750"
         android:textSize="25sp"
         android:layout_marginBottom="20dp"/>
 
@@ -45,7 +45,7 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:text="Mexico"
-        android:backgroundTint="#4CAF50"
+        android:backgroundTint="#61A564"
         android:textSize="25sp"
         android:layout_marginBottom="20dp"/>
 
